--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+  <div id="newModal"></div>
   <div id="modal"></div>
+  
   <div id="content">
     <header>
       <h1>The <em>Almost</em> Final Countdown</h1>
